--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-video": "^6.0.0",
+    "react-native-video-controls": "^2.8.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0"
