--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hauvo/react-native-360-image-viewer": "^1.0.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
@@ -18,18 +19,27 @@
     "@reduxjs/toolkit": "^2.2.4",
     "lodash": "^4.17.21",
     "react": "18.2.0",
+    "react-360": "^1.1.0",
+    "react-360-cli": "^1.1.0",
+    "react-360-web": "^1.1.0",
     "react-native": "0.74.1",
+    "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.16.1",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-pager-view": "^6.3.1",
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.0.0",
     "react-native-video-controls": "^2.8.1",
+    "react-native-webview": "^13.10.2",
     "react-redux": "^9.1.2",
+    "react-vr-cli": "^0.3.6",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "three": "^0.164.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
