--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@hauvo/react-native-360-image-viewer": "^1.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.4",
+    "axios": "^1.7.2",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-360": "^1.1.0",
@@ -24,9 +26,13 @@
     "react-360-web": "^1.1.0",
     "react-native": "0.74.1",
     "react-native-elements": "^3.4.3",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.16.1",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-image-crop-picker": "^0.41.2",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^6.3.1",
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
