--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.3.1",
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
