--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-simple-toast": "^3.3.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.0.0",
     "react-native-video-controls": "^2.8.1",
